# ore-backend

./: .env  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  api_documentation.md  deployment_fixes_documentation.md  fee_optimization_config.env.example  fix_cached_plan_error.md  id.json  main_rs_documentation.md  martingale_schema_change_summary.md  martingale_strategy_documentation.md  martingale_websocket_documentation.md  migration_add_wallet_address_to_martingale.sql  migration_add_winning_square.sql  migration_fix.sql  ore_api_postman_collection.json  solana-localanet.md  test_martingale_ws.js  test_ws.js
.github/workflows/: deploy.yml
src/: main.rs
