[package]
name = "ore-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"
# REMOVE bcrypt - ini yang konflik dengan zeroize
# bcrypt = "0.15"
argon2 = "0.5"  # Alternative untuk password hashing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"

# Solana v2 (updated to latest compatible versions)
solana-sdk = "2.3"
solana-client = "2.3"
solana-account-decoder = "2.3"
solana-program = "2.3"
solana-transaction-status = "2.3"

# ORE API (updated for better compatibility)
ore-api = { path = "../ore/ore/api" }

# Steel - updated version for better Solana v2 compatibility
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", features = ["sink"] }
tokio-stream = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
steel = "4.0.4"